--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "webapp",
+  "homepage": "https://shaikmohammed-maaz.github.io/WebApp/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,10 +8,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@vkruglikov/react-telegram-web-app": "^2.1.9",
+    "gh-pages": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.2"
