made the design whole lot better

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webapp",
+  "name": "collabria-nexus",
   "homepage": "https://shaikmohammed-maaz.github.io/WebApp/",
   "private": true,
   "version": "0.0.0",
